Improved build system
libVFRendering now builds on Debian 8 (Jessie) and Ubuntu 16.04 (Xenial)
using make and/or CMake. For Debian 8, a manual installation of a recent
CMake version is required, as Debian 8 only has CMake 3.0.2. Support for
older CMake versions will be looked into in the future.

The demo has been removed from the default targets of the Makefile
and for CMake, the BUILD_DEMO option was introduced. Currently the CI
systems do not build the demo.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 project(VFRendering VERSION 0.1.0)
 
+option(BUILD_DEMO "Whether or not a demo executable should be built" OFF)
+
 include(ExternalProject)
 ExternalProject_add(qhull
 	GIT_REPOSITORY https://github.com/qhull/qhull.git
@@ -80,13 +82,14 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_EXTENSIONS OFF)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/thirdparty/glm/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/thirdparty/glad/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_BINARY_DIR}/thirdparty-install/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_BINARY_DIR}/thirdparty-install/include/libqhullcpp)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 install(DIRECTORY include/VFRendering DESTINATION include)
 
 # Build demo
-
+if (BUILD_DEMO)
 add_executable(${PROJECT_NAME}Demo demo.cxx)
 target_link_libraries(${PROJECT_NAME}Demo ${PROJECT_NAME})
 
@@ -98,3 +101,4 @@ set_property(TARGET ${PROJECT_NAME}Demo PROPERTY CXX_STANDARD_REQUIRED ON)
 set_property(TARGET ${PROJECT_NAME}Demo PROPERTY CXX_EXTENSIONS OFF)
 
 target_include_directories(${PROJECT_NAME}Demo PRIVATE ${PROJECT_SOURCE_DIR}/thirdparty/glad/include)
+endif()
