--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,15 @@ project(VFRendering VERSION 0.1.2)
 
 option(BUILD_DEMO "Whether or not a demo executable should be built" OFF)
 
-if (NOT qhull_LIBS)
+if((NOT qhull_LIBS) OR (NOT qhull_INCLUDE_DIRS))
+
+if(qhull_LIBS)
+message(WARNING "qhull_LIBS is set, but qhull_INCLUDE_DIRS is missing.")
+endif()
+if(qhull_INCLUDE_DIRS)
+message(WARNING "qhull_INCLUDE_DIRS is set, but qhull_LIBS is missing.")
+endif()
+
 include(ExternalProject)
 ExternalProject_add(qhull
 	GIT_REPOSITORY https://github.com/qhull/qhull.git
@@ -22,7 +30,9 @@ set_property(TARGET libqhullcpp PROPERTY INTERFACE_LINK_LIBRARIES libqhullstatic
 add_dependencies(libqhullcpp qhull)
 
 set(qhull_LIBS libqhullcpp)
-endif(NOT qhull_LIBS)
+set(qhull_INCLUDE_DIRS "${PROJECT_BINARY_DIR}/thirdparty-install/include;${PROJECT_BINARY_DIR}/thirdparty-install/include/libqhullcpp")
+endif()
+
 
 set(SOURCE_FILES
     src/ArrowRenderer.cxx
@@ -39,7 +49,7 @@ set(SOURCE_FILES
     src/VectorfieldIsosurface.cxx
     src/VectorSphereRenderer.cxx
     src/View.cxx
-    ${CMAKE_SOURCE_DIR}/thirdparty/glad/src/glad.c
+    ${PROJECT_SOURCE_DIR}/thirdparty/glad/src/glad.c
 )
 
 set(HEADER_FILES
@@ -86,8 +96,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_EXTENSIONS OFF)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/thirdparty/glm/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/thirdparty/glad/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_BINARY_DIR}/thirdparty-install/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_BINARY_DIR}/thirdparty-install/include/libqhullcpp)
+target_include_directories(${PROJECT_NAME} PRIVATE ${qhull_INCLUDE_DIRS})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 install(DIRECTORY include/VFRendering DESTINATION include)
