--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,8 +109,11 @@ install(DIRECTORY include/VFRendering DESTINATION include)
 if (BUILD_DEMO)
 add_executable(${PROJECT_NAME}Demo demo.cxx)
 target_link_libraries(${PROJECT_NAME}Demo ${PROJECT_NAME})
+if (${UNIX})
+target_link_libraries(${PROJECT_NAME}Demo dl)
+endif(${UNIX})
 
-find_package(glfw3 3.2 REQUIRED)
+find_package(glfw3 3 REQUIRED)
 target_link_libraries(${PROJECT_NAME}Demo glfw)
 
 set_property(TARGET ${PROJECT_NAME}Demo PROPERTY CXX_STANDARD 11)
