Add VectorField and VectorFieldRenderer to enable multiple VFs in one View. - The `VectorField` class contains all vector-field-specific data previously contained in  `View`. It also provides functions to update the geometry, directions, or both. - The `VectorFieldRenderer` is an abstraction to distinguish from `Renderer`s which do not contain a VF, such as `CombinedRenderer` or `CoordinateSystemRenderer`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ set(SOURCE_FILES
     src/SphereRenderer.cxx
     src/SurfaceRenderer.cxx
     src/Utilities.cxx
+    src/VectorField.cxx
+    src/VectorFieldRenderer.cxx
     src/VectorfieldIsosurface.cxx
     src/VectorSphereRenderer.cxx
     src/View.cxx
@@ -71,6 +73,8 @@ set(HEADER_FILES
     include/VFRendering/SphereRenderer.hxx
     include/VFRendering/SurfaceRenderer.hxx
     include/VFRendering/Utilities.hxx
+    include/VFRendering/VectorField.hxx
+    include/VFRendering/VectorFieldRenderer.hxx
     include/VFRendering/VectorSphereRenderer.hxx
     include/VFRendering/View.hxx
     include/shaders
