--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ set(SOURCE_FILES
     src/FPSCounter.cxx
     src/Geometry.cxx
     src/GlyphRenderer.cxx
+    src/DotRenderer.cxx
     src/IsosurfaceRenderer.cxx
     src/Options.cxx
     src/RendererBase.cxx
@@ -85,6 +86,7 @@ set(HEADER_FILES
     include/VFRendering/CoordinateSystemRenderer.hxx
     include/VFRendering/FPSCounter.hxx
     include/VFRendering/GlyphRenderer.hxx
+    include/VFRendering/DotRenderer.hxx
     include/VFRendering/Geometry.hxx
     include/VFRendering/IsosurfaceRenderer.hxx
     include/VFRendering/Options.hxx
@@ -97,6 +99,8 @@ set(HEADER_FILES
     include/VFRendering/VectorSphereRenderer.hxx
     include/VFRendering/View.hxx
     include/shaders
+    include/shaders/dot.frag.glsl.hxx
+    include/shaders/dot.vert.glsl.hxx
     include/shaders/glyphs.frag.glsl.hxx
     include/shaders/glyphs.vert.glsl.hxx
     include/shaders/boundingbox.frag.glsl.hxx
