--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ before_install:
       if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew list python3 &>/dev/null || brew install python3 && brew postinstall python3; fi
     fi
   # Install needed Python packages
+  - sudo pip3 install --upgrade six
   - sudo pip3 install numpy wheel twine
 
 
