Set Qhull version to 7.3.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ install:
 
   # Build the python package
   - cd ${TRAVIS_BUILD_DIR}
-  - python3 setup.py sdist bdist_wheel;
+  - python3 setup.py bdist_wheel;
 
 
 script:
