--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: trusty
+dist: bionic
 language: cpp
 
 matrix:
@@ -11,45 +11,24 @@ matrix:
     # Linux, GCC 6
     - os: linux
       env: COMPILER_C=gcc-6 COMPILER_CXX=g++-6 CMAKE_OPTIONS="-DBUILD_PYTHON_BINDINGS=ON" PYPI=true
-      compiler: g++
-      addons:
-        apt:
-          packages:
-          - g++-6
-          - ca-certificates
-          - python3.6
-          - python3.6-dev
-          - python3-pip
-          sources:
-          - sourceline: 'ppa:ubuntu-toolchain-r/test'
-          - sourceline: 'ppa:jonathonf/python-3.6'
+      compiler: gcc
 
 
 before_install:
-  # Run homebrew on osx
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
-  # Install a recent CMake and Python3 (unless already installed on OS X)
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      sudo apt-get purge cmake
-      DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-      mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
-      CMAKE_URL="https://cmake.org/files/v3.9/cmake-3.9.6.tar.gz"
-      mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-      cd cmake
-      ./bootstrap
-      make -j4
-      sudo make install
-      cmake --version
-      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
       export CC=${COMPILER_C} CXX=${COMPILER_CXX}
-    else
-      if ! brew ls --version cmake &>/dev/null; then brew install cmake; fi
-      if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew upgrade python; fi
+      sudo apt-get update -q
+      sudo apt-get install -y g++-6 python3.6-dev python3-pip cmake
     fi
-  # Install needed Python packages
+    if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
+      # Install a recent CMake and Python3 (unless already installed on OS X)
+      brew update
+      if ! brew ls --version cmake &>/dev/null; then brew install cmake; fi
+      brew upgrade python
+    fi
   - sudo python3 -m pip install --upgrade six
-  - sudo pip3 install numpy wheel twine
+  - sudo python3 -m pip install numpy wheel twine
 
 
 install:
